--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,115 @@
+.logo{
+    height: 30vw;
+}
 /* You can add global styles to this file, and also import other style files */
+html{
+    max-width: 100vw;
+    max-height: 100vh;
+}
+section{
+    background-color: rgb(229, 229, 229);
+    height: 100vh;
+    width: 100vw;
+    opacity: 1;
+    overflow: hidden;
+    transition: opacity 1s ease;   
+}
+section.fade-out {
+    opacity: 0;
+    /* Agrega aquí cualquier otra animación de desvanecimiento que desees aplicar */
+  }
+a{
+    all:unset;
+}
+body{
+    margin: 0;
+    overflow-x: hidden;
+}
+nav{
+    position: absolute;
+    opacity: 0.8;
+   
+    width: 100vw;
+    background-size: cover;
+}
+nav ul{
+    list-style-type: none;
+    text-align: center;
+    display: flex;
+    
+}
+nav ul li{
+    margin: 0 2vw;
+    font-size: 1.3vw;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    position: relative;
+    top: 2vw;
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+
+nav img{
+    margin: 0 2vw;
+    max-height: 10vw;
+    display: flex;
+    position: relative;
+    top: -2.3vw;
+}
+input{
+    width: 20vw;
+    height: 2vw;
+    border: none;
+    background-color:rgb(217, 218, 218);
+    outline: none;
+    position: fixed;
+    top: 1.7vw;
+    border-radius: 4vw;
+    padding: 0.3vw 1vw;
+    right: 5vw;
+}
+.icon{
+    height: 1.7vw;
+    width: auto;
+    position: fixed;
+    top: 2vw;
+    right: 4.3vw;
+    opacity: 0.7;
+}
+
+
+/*FOOTER*/
+p{
+    font-size: 1vw;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    margin: 0 2vw;
+}
+.footer{
+    display: flex;
+    margin: 0;
+    position: relative;
+    bottom: -10vw;
+    left: 1vw;
+}
+li:hover{
+    color: brown;
+    font-size: 2vw;
+    margin: 0 2vw;
+    transform: translateY(-1.2vw);
+
+
+}
+
+
+body {
+    opacity: 1;
+    transition: opacity 1s ease;
+  }
+  
+  body.fade-out {
+    opacity: 0;
+  }
+  #carrusel{
+    display: flex;
+    flex-direction: column;
+}
